--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
+	   			<h5>Hello, World !</h5>
 	   			<h1>I'm Susanta Biswas.</h1>
 
 	   			<p class="intro-position">
@@ -653,7 +653,7 @@
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/4.jpg" alt="" />
+				     		<img src="images/portfolio/modals/4.jpg" alt="" height="900px"/>
 				     	</div>      	
 
 					   <div class="description-box">
