--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/2.jpg" alt="Profile Picture">
+   				<img src="images/profile.JPG" alt="Profile Picture">
 
    				<p class="lead">I am Susanta Biswas, a senior undergraduate in Computer Science and Engineering at National Institute of Technology Durgapur. I am broadly interested in Machine Learning, Computer Vision , Sequence models and their applications.</p>
    			</div>   			
