--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/face_recog/fr5.JPG" alt="FaceRecog">
+	               	<img src="images/portfolio/face_recog/fr5.jpg" alt="FaceRecog">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -718,7 +718,19 @@
                   </div>
                   <br>
 
-                 
+				<div class="about-content">
+					<h3>
+						<div class="left">
+							<strong>
+								<a href="https://github.com/susantabiswas/Word-Prediction-Ngram">Word Prediction using n-gram Probabilistic Model</a>
+							</strong>
+						</div>
+					</h3>
+					<UL>
+						<LI>Word level Language for Word Prediction using n-gram Probabilistic Model with different Smoothing Techniques.
+					</UL>
+				</div>
+				<br>
 				  
 				  <div class="about-content">
 					  <h3><div class="left"> <strong><a href="https://github.com/susantabiswas/Code-Snippet-Manager">Code Snippet Manager</a></strong> </div></h3>
