--- a/index.html
+++ b/index.html
@@ -727,7 +727,8 @@
 						</div>
 					</h3>
 					<UL>
-						<LI>Word level Language for Word Prediction using n-gram Probabilistic Model with different Smoothing Techniques.
+						<LI>Word level Language model for Word Prediction using n-gram Probabilistic Model. Different Smoothing techniques like Knesser-Ney, Interpolated Knesser-Ney, Good Turing etc. were implemented.
+							Model based on backoff and Interpolation were also implemented.
 					</UL>
 				</div>
 				<br>
