--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
    <!-- script
    ================================================== -->   
-	<script src="js/modernizr.js"></script>
-	<script src="js/pace.min.js"></script>
+	<script async src="js/modernizr.js"></script>
+	<script async src="js/pace.min.js"></script>
 
    <!-- favicons
 	================================================== -->
@@ -72,7 +72,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World !</h5>
+	   			<h5>Hello, World < / > </h5>
 	   			<h1>I'm Susanta Biswas.</h1>
 
 	   			<p class="intro-position">
