Working site with few typos

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>I love exploring and learning about new interesting things that excites me. 
-				I'm interested in solving machine learning problems which can help solve real world problems. I like participating in competitive machine learning challenges. Earlier I used to take part in algorithmic challenges also.
-				In my free time I enjoy spending time reading manga and watching anime. 
+   			<p>I love exploring and learning about new interesting things that excite me. 
+				I'm interested in solving machine learning problems which can help solve real world problems. I like participating in competitive machine learning challenges.
+				In my free time I enjoy reading manga and watching anime. 
 			</p>
 
    			<ul class="info-list">
@@ -152,9 +152,9 @@
 
    			<h3>Skills</h3>
    			<p>I have experience in solving a lot of Deep Learning problems in  fields like convolutional neural networks, sequence models etc. 
-				I am well acquainted with Scikit Learn and deep learning frameworks like Keras and Tensorflow .
+				I am well acquainted with <strong>Scikit Learn</strong> and deep learning frameworks like <strong> Keras</strong> and <strong>Tensorflow</strong> .
 			     <br><br>I have good working knowledge in C++ and C with
-			  sound understanding of data structures and Algorithms. Also I have programming experience in Python, C#, Matlab.			
+			  sound understanding of <strong>Data Structures and Algorithms</strong>. Also I have programming experience in <strong>Python, C#, Matlab</strong>.			
 			</p>
 				<!--
 				<ul class="skill-bars">
@@ -192,7 +192,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://drive.google.com/open?id=1D2MHMg6REBWkDmOqR_bawHwi3o_V4-1s" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -614,7 +614,7 @@
 					      <h4>Trigger Word Assistant</h4>		      
 					      <p>A voice based assistant application which executes the assigned command on detecting the trigger word from the user 
 							  voice. A trigger word is a word to which the model gets triggered once it detects it. Like for example "Hey Cortana" or "Ok Google". Here the trigger word used is "activate".
-							  The Model used for detecting trigger word uses a deep Recurrent Neural Network with Gated Recurrent Units (GRU). The model is build using Keras.
+							  The Model used for detecting trigger word uses a deep Recurrent Neural Network with Gated Recurrent Units (GRU).
 
 						  </p>
 
@@ -754,7 +754,7 @@
 				  <div class="about-content">
 					  <h3><div class="left"> <strong><a href="https://github.com/susantabiswas/Networking-Codes">Computer Networks</a></strong> </div></h3>
                       <UL>
-                        <LI> Implemented concurrent client server model that can perform arithematic operations. 
+                        <LI> Implemented concurrent client server model that can perform arithmetic operations. 
                       </UL>
                   </div>
                   <br>
@@ -794,58 +794,53 @@
    ================================================== -->
 	<section id="contact">
 
-		<div class="row section-intro">
-   		<div class="col-twelve">
-		</div> 
-  
+		<div class="row contact-info">
 
-   	<div class="row contact-info">
+			<div class="col-six tab-full">
 
-   		<div class="col-four tab-full">
+				<div class="icon">
+					<i class="icon-pin"></i>
+				</div>
 
-   			<div class="icon">
-   				<i class="icon-pin"></i>
-   			</div>
+				<h5>Where to find me</h5>
 
-   			<h5>Where to find me</h5>
+				<p>
+				Room B-203, Hall -5,<br>
+				NIT Durgapur, WB<br>
+				</p>
 
-   			<p>
-            Room B-203, Hall -5,<br>
-            NIT Durgapur, WB<br>
-            </p>
+			</div>
+			
+			<div class="col-six tab-full collapse">
 
-   		</div>
-		
-   		<div class="col-four tab-full collapse">
+				<div class="icon">
+					<i class="icon-mail"></i>
+				</div>
 
-   			<div class="icon">
-   				<i class="icon-mail"></i>
-   			</div>
+				<h5>Email Me At</h5>
 
-   			<h5>Email Me At</h5>
+				<p>susanta (dot) biswas180 (at) gmail (dot) com<br>
+				</p>
 
-   			<p>susanta (dot) biswas180 (at) gmail (dot) com<br>
-			</p>
+			</div>
+			
+			<!--
+			<div class="col-four tab-full">
 
-   		</div>
-		
-		<!--
-   		<div class="col-four tab-full">
+				<div class="icon">
+					<i class="icon-phone"></i>
+				</div>
 
-   			<div class="icon">
-   				<i class="icon-phone"></i>
-   			</div>
+				<h5>Call Me At</h5>
 
-   			<h5>Call Me At</h5>
+				<p>Phone: (+63) 555 1212<br>
+					Mobile: (+63) 555 0100<br>
+						Fax: (+63) 555 0101
+				</p>
 
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
-			   </p>
-
-   		</div>
-	-->
-   	</div> <!-- /contact-info -->
+			</div>
+		-->
+		</div> <!-- /contact-info -->
 		
 	</section> <!-- /contact -->
 
