--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
 
 					   <div class="description-box">
 					      <h4>Text Article Generator </h4>		      
-					      <p>Text Article generation using LSTM network. It uses a character level Language model implementation for the sequence generation task. </p>
+					      <p>Want to generate text like Shakespeare? well this can help. Text Article generation using LSTM network. It uses a character level Language model implementation for the sequence generation task. </p>
 
 					      <div class="categories">Natural Language Processing </div>			               
 					   </div>
