--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Contact Me" class="button stroke smoothscroll">Contact Me</a>
-   			<a href="https://github.com/susantabiswas/susantabiswas.github.io/raw/master/data/Resume%20v3_ML.pdf" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="https://github.com/susantabiswas/susantabiswas.github.io/raw/master/data/SusantaBiswasML.pdf" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
