--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/bmp" href="favicon.bmp">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.b68f2d779ccaeb33c204.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.20ab2d163684112c2aba.js"></script><script type="text/javascript" src="scripts.5e7cc21a2c2d79468484.js"></script><script type="text/javascript" src="main.136e8d91f72af96a9833.js"></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.20ab2d163684112c2aba.js"></script><script type="text/javascript" src="scripts.5e7cc21a2c2d79468484.js"></script><script type="text/javascript" src="main.30f7e551fc09cbe55dcc.js"></script></body>
 </html>
