Fixed bio text fitting for smaller devices

--- a/index.html
+++ b/index.html
@@ -131,13 +131,10 @@
                                     <div class="section-content">
                                         <p>
                                             I currently work as an Applied AI developer at Cognizant, designing and developing solutions which can leverage ML.
-                                            <br><br>
+                                            <br>
                                             I completed my Bachelor's degree in Computer Science and Engineering from <span id="custom">National Institute of
-                                            Technology Durgapur</span>, where
-                                            I worked on <span id="custom">computational geometry problems</span> and found a deterministic polynomial time algorithm
-                                            for biochromatic line segments cover problem. 
-                                        </p>
-                                        <p>
+                                            Technology Durgapur</span>, where I undertook research in <span id="custom">Computational geometry</span>.
+                                            <br>
                                             I am broadly interested in <span id="custom">Machine Learning, Computer Vision, Sequence models</span> and their
                                             applications. I love exploring and learning about new interesting things that excite me.
                                         </p>
@@ -171,13 +168,10 @@
                                     <div class="section-content">
                                         <p>
                                             I currently work as an Applied AI developer at Cognizant, designing and developing solutions which can leverage ML.
-                                            <br><br>
+                                            <br>
                                             I completed my Bachelor's degree in Computer Science and Engineering from <span id="custom">National Institute of
-                                            Technology Durgapur</span>, where
-                                            I worked on <span id="custom">computational geometry problems</span> and found a deterministic polynomial time algorithm
-                                            for biochromatic line segments cover problem. 
-                                        </p>
-                                        <p>
+                                            Technology Durgapur</span>, where I undertook research in <span id="custom">Computational geometry</span>.
+                                            <br>
                                             I am broadly interested in <span id="custom">Machine Learning, Computer Vision, Sequence models</span> and their
                                             applications. I love exploring and learning about new interesting things that excite me.
                                         </p>
