--- a/index.html
+++ b/index.html
@@ -826,17 +826,17 @@
                         <div class="row">
                             <div class="item">
                                 <div class="col-md-4">
-                                    <a href="img/certificates/7.JPG" data-lightbox="image"><img src="img/certificates/7.jpg" alt="image 7"></a>
+                                    <a href="img/certificates/7.JPG" data-lightbox="image"><img src="img/certificates/7.JPG" alt="image 7"></a>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="col-md-4">
-                                    <a href="img/certificates/8.JPg" data-lightbox="image"><img src="img/certificates/8.jpg" alt="image 8"></a>
+                                    <a href="img/certificates/8.JPg" data-lightbox="image"><img src="img/certificates/8.JPG" alt="image 8"></a>
                                 </div>
                             </div>
                             <div class="item">
                                 <div class="col-md-4">
-                                    <a href="img/certificates/9.JPG" data-lightbox="image"><img src="img/certificates/9.jpg" alt="image 9"></a>
+                                    <a href="img/certificates/9.JPG" data-lightbox="image"><img src="img/certificates/9.JPG" alt="image 9"></a>
                                 </div>
                             </div>
                         </div>
@@ -844,7 +844,7 @@
                         <div class="row">
                             <div class="item">
                                 <div class="col-md-4">
-                                    <a href="img/certificates/10.JPG" data-lightbox="image"><img src="img/certificates/10.jpg" alt="image 10"></a>
+                                    <a href="img/certificates/10.JPG" data-lightbox="image"><img src="img/certificates/10.JPG" alt="image 10"></a>
                                 </div>
                             </div>
                             <div class="item">
