Fixed broken img links in projects

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                         <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                             <figure>
                                 <div class="item">
-                                    <img src="img/projects/facial-emotion/1.JPG" alt="">
+                                    <img src="img/projects/facial-emotion/1.jpg" alt="">
                                     <div class="text-content">
                                         <h4>Realtime Facial Emotion Analyzer</h4>
                                         <span><a href="https://susantabiswas.github.io/realtime-facial-emotion-analyzer/"><i class="fa fa-github fa-2x"></i></a></span>
@@ -571,7 +571,7 @@
                         <article class="col-lg-3 col-md-4 col-sm-6 col-12 tm-gallery-item">
                             <figure>
                                 <div class="item">
-                                    <img src="img/projects/language-translator/1.JPG" alt="">
+                                    <img src="img/projects/language-translator/1.jpg" alt="">
                                     <div class="text-content">
                                         <h4>English to French Language Translator</h4>
                                         <span><a href="https://github.com/susantabiswas/Neural-Language-Translator/"><i class="fa fa-github fa-2x"></i></a></span>
