--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <li><a href="#about-me">About me</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#experience">Experience</a></li>
-                        <li><a href="#projects">Projectss</a></li>
+                        <li><a href="#projects">Projects</a></li>
                         <li><a href="#certifications">Certifications</a></li>
                     </ul>
                 </nav>
@@ -277,7 +277,7 @@
                                                 </li>
                                                 
                                                 <li>
-                                                    Lead a team of developers for developing a model for <b>outage</b> prediction in data centers.
+                                                    Lead a team of developers for developing a model for <b>outage</b> prediction in data centres.
                                                 </li>
                                                 
                                                 <li>
