--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                             <strong>Comms Media Technology</strong> 
                                             <ul>
                                                 <li>
-                                                    Backend team Lead for an <b>object detection and tracking</b> system capable of running on low-end hardware.
+                                                    Backend team Lead for an <b>object detection and tracking</b> system designed for low-end hardware.
                                                     Designed and developed the entire backend machine learning and server-side web architecture.
                                                 </li>
                                                 
