--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                                                 </li>
                                                 
                                                 <li>
-                                                    Decreased video processing time by <b>8,000%</b> by designing, developing algorithms
-                                                    and a new optimized application pipeline for an application that gives insights about people in crowd.
+                                                    Decreased video processing time by <b>8,000%</b> by designing,
+                                                    developing algorithms and a new optimized application pipeline for an Object detection application.
                                                 </li>
                                             </ul>
                                         </p>
